# PeakModMenuCPP

./: .gitignore  README.md
DUMP/Assembly-CSharp/: ACHIEVEMENTTYPE.cs  AOE.cs  AOSetting.cs  AchievementCLIParser.cs  AchievementData.cs  AchievementManager.cs  AchievementManagerDebug.cs  ActionManager.cs  Action_AddOrRemoveThorns.cs  Action_ApplyAffliction.cs  Action_ApplyAntigrav.cs  Action_ApplyInfiniteStamina.cs  Action_ApplyMassAffliction.cs  Action_ApplySuperJump.cs  Action_AskBingBong.cs  Action_Balloon.cs  Action_BecomeSkeleton.cs  Action_BookOfBonesAnim.cs  Action_CallScoutmaster.cs  Action_ClearAllStatus.cs  Action_ConstructableScoutCannonScroll.cs  Action_Consume.cs  Action_ConsumeAndSpawn.cs  Action_Die.cs  Action_Flare.cs  Action_GiveExtraStamina.cs  Action_Guidebook.cs  Action_GuidebookScroll.cs  Action_IncrementSteamStat.cs  Action_InflictPoison.cs  Action_LaunchPlayer.cs  Action_LightLantern.cs  Action_ModifyStatus.cs  Action_MoraleBoost.cs  Action_Numb.cs  Action_OverrideCamera.cs  Action_Parasol.cs  Action_Passport.cs  Action_PlayAnimation.cs  Action_PlayItemAnimation.cs  (+850 more)
DUMP/Assembly-CSharp/Crab/Network/: IMatchMakingEvents.cs  IMatchmakingAPI.cs  INetworkRoomEvents.cs  IRelayAPI.cs  IRelayEvents.cs  PhotonCallbackTarget.cs  PhotonRoomEvents.cs  PhotonShim.cs
DUMP/Assembly-CSharp/Knot/: AlignWithSpline.cs  KnotMaker.cs  KnotTemplate.cs  KnotTieText.cs  KnotUnmaker.cs  TiedKnotVisualizer.cs
DUMP/Assembly-CSharp/Peak/: BreakableHelper.cs  CLI.cs  DictionaryContainer.cs  DisableWhenUsingSteam.cs  EndgameFlareSpawner.cs  FogShaderParams.cs  IntegratedGraphicsHelper.cs  ItemOptimizationManager.cs  ItemOptimizer.cs  LimitFrameRate.cs  LoadRunSettingsOnStart.cs  Quicksave.cs  SpawnedItemTracker.cs
PeakModCPP/: CMakeLists.txt
PeakModCPP/src/: main.cpp
PeakModCPP/src/Features/: CursorBypass.cpp  CursorBypass.h  FeatureManager.cpp  FeatureManager.h  Fly.cpp  Fly.h  GodMode.cpp  GodMode.h  InfiniteStamina.cpp  InfiniteStamina.h  InventoryEditor.cpp  InventoryEditor.h  MonoAPI.cpp  MonoAPI.h  NetworkSafety.cpp  NetworkSafety.h  NoAnimationCooldown.cpp  NoAnimationCooldown.h  NoFallDamage.cpp  NoFallDamage.h  NoHunger.cpp  NoHunger.h  PlayerESP.cpp  PlayerESP.h  SuperJump.cpp  SuperJump.h  Teleport.cpp  Teleport.h
PeakModCPP/src/Hooks/: Hooks.cpp  Hooks.h
PeakModCPP/src/Injector/: main.cpp
PeakModCPP/src/UI/: Menu.cpp  Menu.h  Theme.cpp  Theme.h
(+106 files in other folders)
